scss/_media.scss
@media only screen and (max-width: 1030px) {
    .card-name {
        font-size: 7rem;
    }

    .footer {
        .icon {
            font-size: 5rem;
            padding: 0 3rem;
        }
    }
}

@media only screen and (max-width: 780px) {
    .card-name {
        font-size: 5.5rem;
    }

    .footer .icon {
        font-size: 4rem;
        padding: 0 2rem;
    }
}

@media only screen and (max-width: 500px) {
    .fallback {
        display: block;
    }

    .video {
        display: none;
    }

    .circle {
        width: 0;
    }

    .card-name {
        font-size: 4.5rem;
    }

    .footer .icon {
        font-size: 3rem;
        padding: 0 1.4rem;
    }

    html,
    body {
        cursor: auto;
        pointer-events: auto;
    }

    body {
        cursor: auto;
    }

    a {
        cursor: pointer;
    }
}

